--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "sass": "^1.51.0"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
@@ -20,6 +19,7 @@
     "@types/react-dom": "18.0.4",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
+    "sass": "^1.52.1",
     "typescript": "4.6.4"
   }
 }
